resources/public/css/style.css
/* ... */
div.table-of-contents div.category-section:hover div.category-section-close,
div.table-of-contents div.category-sortable.ui-draggable-dragging div.category-section-close{
  opacity: 1;
}

div.table-of-contents div.category-section div.category-section-sortable {
  float: right;
  opacity: 0;
  cursor: hand;
  margin-top: 6px;
  background-image: url("/img/draggable.png");
  width: 20px;
  height: 30px;
  background-size: 20px 30px;
}

div.table-of-contents div.category-section:hover div.category-section-sortable,
div.table-of-contents div.category-section.ui-draggable-dragging div.category-section-sortable{
opacity: 1;
}

div.table-of-contents div.table-of-contents-inner div.category-section a {
  margin: 0 10px 0 10px;
  width: 125px;
  float: left;
}

div.table-of-contents div.table-of-contents-inner div.category-section:hover,
div.table-of-contents div.table-of-contents-inner div.category-section.ui-draggable-dragging{
background-color: rgba(0, 0, 0, 0.07);
}

div.table-of-contents div.table-of-contents-inner div.new-section {
  height: 8px;
  margin-right: 14px;
  background-color: transparent;
  cursor: pointer;
}

div.table-of-contents div.table-of-contents-inner div.new-section div.new-section-internal {
  height: 1px;
  position: relative;
  top: 4px;
  left: 0px;
  width: 178px;
  background-color: rgba(0, 0, 0, 0.1);
  display: none;
}

div.table-of-contents div.table-of-contents-inner div.new-section:hover div.new-section-internal {
  display: block;
}

div.table-of-contents div.table-of-contents-inner div.new-section div.add-section {
  width: 20px;
  height: 20px;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 2px;
  position: relative;
  left: 181px;
  top: -6px;
  display: none;
  padding: 2px 0 0 4px;
  color: white;
  font-size: 14px;
  cursor: pointer;
  z-index: 10;
}

div.table-of-contents div.table-of-contents-inner div.new-section:hover div.add-section {
  display: block;
}

div.table-of-contents div.add-section:after {
  right: 100%;
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-color: rgba(0, 0, 0, 0);
  border-right-color: rgba(0, 0, 0, 0.1);
  border-width: 4px;
  margin-top: -4px;
}

div.table-of-contents div.add-section.show {
  display: block;
}

div.table-of-contents div.table-of-contents-inner div.category-section a,
div.table-of-contents div.table-of-contents-inner div.category-section a:hover,
div.table-of-contents div.table-of-contents-inner div.category-section a:active,
div.table-of-contents div.table-of-contents-inner div.category-section a:visited {
  text-decoration: none;
}

div.table-of-contents div.table-of-contents-inner div.category-section a p.section-title {
  color: #2D2D2D;
  font-size: 16px;
  margin-bottom: 0px;
  white-space: nowrap;
}

div.table-of-contents div.table-of-contents-inner div.category-section a p.section-date {
  color: #5B5B5B;
  font-weight: lighter;
  font-size: 11px;
  margin-bottom: 0px;
}

div#new-section-popover-container {
  display: none;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: 1031;
}

div.section-animator-box {
  position: relative;
  margin-bottom: 30px;
}

div.section-animator-box div.section-box {
  position: absolute;
  top: 0;
  left: 0;
  width: 600px;
}

div.update-footer.section-editing {
  opacity: 0.2;
}

div.update-footer div.update-footer-hover {
  display: none;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 2px;
  position: absolute;
  top: -14px;
  left: 80px;
  background-color: white;
  padding: 5px;
}

div.update-footer div.update-footer-hover div.author {
  margin: 8px 0 0 35px;
}

div.update-footer div.update-footer-hover.hover {
  display: block;
}

div.update-footer-hover:after, div.update-footer-hover:before {
  right: 100%;
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

div.update-footer-hover:after {
  border-color: transparent; /*rgba(136, 183, 213, 0);*/
  border-right-color: white;
  border-width: 7px;
  margin-top: -7px;
}

div.update-footer-hover:before {
  border-color: rgba(0, 0, 0, 0);
  border-right-color: rgba(0, 0, 0, 0.3);
  border-width: 8px;
  margin-top: -8px;
}

div.popover-background {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.3);
  opacity: 0;
}

div.new-section-popover {
  position: absolute;
  width: 390px;
  height: 460px;
  top: 50%;
  left: 50%;
  margin-top: -220px;
  margin-left: -145px;
  background-color: white;
  text-align: center;
  border: 1px solid rgba(0, 0, 0, 0.8);
  border-radius: 4px;
  overflow: auto;
  padding: 20px 0px 10px 10px;
}

div.new-section-popover > h4{
  font-size: 16px;
  margin-top: 10px;
  margin-bottom: 29px;
}

div.new-section-popover div.new-section-container {
  background-color: white;
  text-align: left;
  overflow: auto;
  height: 290px;
}

div.new-section-popover div.new-section-category{
  margin-top: 10px;
}

div.new-section-popover div.bottom-gradient {
  right:0;
  bottom:0;
  left:0;
  position:absolute;
  z-index:2;
  height:40px; /* adjust it to your needs */
  background: url(data:image/svg+xml;base64,alotofcodehere);
  background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(70%,rgba(255,255,255,1)));
  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
  background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
  background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
  background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
}
/* ... */

